# anthropic-quickstarts-win

./: README.md
computer-use-demo/: dev-requirements.txt  pyproject.toml
computer-use-demo/computer_use_demo/: loop.py  requirements.txt  streamlit.py
computer-use-demo/computer_use_demo/tools/: computer.py
