[project]
name = "computer-use-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic[bedrock,vertex]>=0.37.1",
    "boto3>=1.28.57",
    "google-auth>=2,<3",
    "jsonschema==4.22.0",
    "pillow>=11.0.0",
    "pre-commit==3.8.0",
    "pyautogui>=0.9.54",
    "pytest-asyncio==0.23.6",
    "pytest==8.3.3",
    "ruff==0.6.7",
    "streamlit>=1.38.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
useLibraryCodeForTypes = false

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
